--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-.idea
+# App specific
 appConfig.json
-client/build/
-client/node_modules/
 docs/
-*.exe
 *.txt
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
